Fixed image spacing issues on About page

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-.banner-container {
-    padding: 5%;
-}
-.section-banner {
-    text-align: center;
-}
-/* .section-banner-left {
-    flex-basis: 20%;
-} */
 .title-banner-text {
     font-size: 100px;
     text-align: center;
@@ -15,10 +6,20 @@
     font-size: 50px;
     text-align: center;
 }
-.about-container{
-    
+.about-container {
+    display: flex;
+}
+.about-content {
+    display: inline;
+}
+.about-text {
+    padding-left: 20%;
+    font-size: 40px;
+    text-align: justify;
 }
 .profile-pic-container {
     background-color: teal;
     padding: 4%;
+    float: left; 
+    margin-right: 1%;
 }
